--- a/Sukhdari_Server/Shared/Sidebar.razor
+++ b/Sukhdari_Server/Shared/Sidebar.razor
@@ -68,7 +68,32 @@
                 </NavLink>
             </AuthorizeView>
           </li>
-      
+
+          <li class="nav-item">
+              
+              <AuthorizeView Roles="Admin">
+                  <NavLink class="nav-link d-flex align-items-center" href="/applog" Match="NavLinkMatch.All">
+                    <span class="nav-icon fa fa-info-circle ml-2" aria-hidden="true"></span>
+
+                    <p class="ml-2">
+                    Application Log
+                  </p>
+                </NavLink>
+            </AuthorizeView>
+          </li>
+
+          <li class="nav-item">
+              
+              <AuthorizeView Roles="Admin">
+                  <NavLink class="nav-link d-flex align-items-center" href="/users" Match="NavLinkMatch.All">
+                    <span class="nav-icon fa fa-users ml-2" aria-hidden="true"></span>
+
+                    <p class="ml-2">
+                    User Accounts
+                  </p>
+                </NavLink>
+            </AuthorizeView>
+          </li>
 
         </ul>
       </nav>
