--- a/Sukhdari_Server/Pages/Store/StoreDashboard.razor
+++ b/Sukhdari_Server/Pages/Store/StoreDashboard.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @page "/store/dashboard"
+@using Serilog
 @layout StoreAdminLayoutT
 @inject IStoreRepo Store
 @inject ICategoryRepo Category
@@ -113,52 +114,69 @@
         public int? clicks { get; set; }
     }
     List<CategoryClickCount> categoryClick = new List<CategoryClickCount>();
+    
     protected override async Task OnInitializedAsync()
     {
-        var authState = await AuthenticationState;
-        if (Store.GetStoreByAdminName(authState.User.Identity.Name) == null)
-        { 
-            Navigator.NavigateTo("/storeNotExist");
-        }
-        categoryCount = await Category.getCategoryCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
-        productCount = await Product.getProductCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
+        try
+        {
+            var authState = await AuthenticationState;
+            if (Store.GetStoreByAdminName(authState.User.Identity.Name) == null)
+            { 
+                Navigator.NavigateTo("/storeNotExist");
+            }
+            categoryCount = await Category.getCategoryCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
+            productCount = await Product.getProductCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
         
-        var products = await Product.getAllProducts(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
-        var topProducts = products.OrderByDescending(i => i.ClickCount).Take(5);
-        totalClickCount = products.Sum(i => i.ClickCount);
-        clicksData = new double[topProducts.Count()];
-        productNames = new string[topProducts.Count()];
-        foreach (var product in topProducts)
-        {
-            double temp = (double)product.ClickCount;
-            clicksData[count] = temp;
-            productNames[count] = product.Name;
-            count++;
-        }
-        var categories = await Category.GetAllCategories(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
-        if(categories != null && categories.Any())
-        {
-            var topCategories = categories.OrderByDescending(i => i.ClickCount).Take(5);
-            if(topCategories != null && topCategories.Any())
+            var products = await Product.getAllProducts(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
+            var topProducts = products.OrderByDescending(i => i.ClickCount).Take(5);
+            totalClickCount = products.Sum(i => i.ClickCount);
+            clicksData = new double[topProducts.Count()];
+            productNames = new string[topProducts.Count()];
+            foreach (var product in topProducts)
             {
-                foreach(var category in topCategories)
+                double temp = (double)product.ClickCount;
+                clicksData[count] = temp;
+                productNames[count] = product.Name;
+                count++;
+            }
+            var categories = await Category.GetAllCategories(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
+            if(categories != null && categories.Any())
+            {
+                var topCategories = categories.OrderByDescending(i => i.ClickCount).Take(5);
+                if(topCategories != null && topCategories.Any())
                 {
-                    CategoryClickCount temp = new CategoryClickCount();
-                    temp.name = category.Name;
-                    temp.clicks = category.ClickCount;
-                    categoryClick.Add(temp);
+                    foreach(var category in topCategories)
+                    {
+                        CategoryClickCount temp = new CategoryClickCount();
+                        temp.name = category.Name;
+                        temp.clicks = category.ClickCount;
+                        categoryClick.Add(temp);
+                    }
                 }
             }
         }
+        catch (Exception ex)
+        {
+            Log.Error($"Error while loading StoreDashboard component\n{ex}\n\n");
+        }
+
     }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        var authState = await AuthenticationState;
-        for (int i = 6; i >= 0; i--)
+        try
         {
-            pastWeekDates.Add(DateTime.Now.AddDays(Convert.ToDouble(-i)).ToLongDateString());
+            var authState = await AuthenticationState;
+            for (int i = 6; i >= 0; i--)
+            {
+                pastWeekDates.Add(DateTime.Now.AddDays(Convert.ToDouble(-i)).ToLongDateString());
+            }
+            weekUniqueUsersCount = IpRepo.getPastWeekUniqueUsersCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
+            await js.InvokeVoidAsync("loadChart", weekUniqueUsersCount, pastWeekDates); 
         }
-        weekUniqueUsersCount = IpRepo.getPastWeekUniqueUsersCount(Store.GetStoreByAdminName(authState.User.Identity.Name).Id);
-        await js.InvokeVoidAsync("loadChart", weekUniqueUsersCount, pastWeekDates); 
+        catch (Exception ex)
+        {
+            Log.Error($"Error while executing OnAfterRenderAsync function in StoreDashboard component\n{ex}\n\n");
+        }
+
     }
 }
